Preparando para deploy, eso espero

--- a/www/templates/empty.html
+++ b/www/templates/empty.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}/dev/null{% endblock %}
+{% block title %}dev/null{% endblock %}
 
 {% block content %}
 
