--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='normalize.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='skeleton.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='icon-48x48.png') }}">
 </head>
 <body>
     <nav class="navbar">
@@ -39,6 +40,9 @@
                     <li><a href="twitter.com/skrd159">@skrd159</a></li>
                     <li><a href="reddit.com/user/Ryuuji159">/u/ryuuji159</a></li>
                 </ul>
+                
+
+
             </div>
         </div>
     </div>
