--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -19,7 +19,7 @@
             {% if g.user %}
             <a href="{{ url_for('blog.create') }}" class="nav-link logout">/create-post</a>
             <a href="{{ url_for('now.update') }}" class="nav-link logout">/update-now</a>
-            <a href="{{ url_for('admin.logout') }}" class="nav-link logout">/logout</a>
+            <a href="{{ url_for('auth.logout') }}" class="nav-link logout">/logout</a>
             {% endif %}
         </div>
     </nav>
