--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,52 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import 'skeleton-scss/scss/skeleton.scss';
 
-// Variables
-@import 'variables';
+/**
+* Ryuuji 
+*/
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+$colorfg: #212121;
+$color01: #0fa0ce;
+
+body {
+    color: $colorfg;
+}
+
+nav {
+    display: block;
+    width: 100%;
+    height: 4rem;
+    border-top: 1px solid #fafafa;
+    border-bottom: 1px solid #fafafa;
+    margin-bottom: 2em;
+
+    .container {
+        width: 100%;
+
+        ul {
+            list-style: none;
+            margin-bottom: 0;
+
+            li {
+                position: relative;
+                float: left;
+                margin-bottom: 0;
+
+                a {
+                    display: inline-block;
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    letter-spacing: .2rem;
+                    margin-right: 35px;
+                    text-decoration: none;
+                    line-height: 4rem;
+                    color: $colorfg;
+
+                    &:hover {
+                        color: $color01 !important; 
+                    }
+                }
+            }
+        }
+    }
+}
+
