--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,8 @@ $color01: #0fa0ce;
 
 body {
     color: $colorfg;
+    line-height: 1.6em;
+    font-size: 1.25em;
     max-width: 80ch;
     padding: 2rem;
     margin: auto;
@@ -15,6 +17,10 @@ body {
 
 hr {
     border: 1px solid $colorborder;
+}
+
+a {
+    color: $colorfg;
 }
 
 .navbar {
