--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -3,6 +3,10 @@ body {
   color: #212121;
 }
 
+hr {
+  border: 1px solid #f2f2f2;
+}
+
 .sidebar {
   position: fixed;
   left: 0;
@@ -49,13 +53,103 @@ body {
   color: #0fa0ce;
 }
 
-.sidebar span {
-  font-size: 1.2rem;
-  margin: 2em 0;
+.sidebar h1 {
+  text-align: center;
 }
 
 .container {
   margin-left: 20ch;
   height: 100vh;
+  padding: 0em 2em;
+}
+
+@media (max-width: 600px) {
+  .sidebar {
+    display: none;
+  }
+
+  .container {
+    margin-left: 0;
+  }
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table th {
+  background: #212121;
+  color: #f2f2f2;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+table td,
+table th {
+  padding: 6px;
+  height: 2em;
+  border-bottom: 1px solid #212121;
+  text-align: left;
+}
+
+table td.controls a {
+  display: block;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  color: #212121;
+}
+
+table th.controls a {
+  display: block;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+}
+
+form {
+  height: 100%;
+}
+
+form label {
+  display: block;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.9em;
+}
+
+form input[type=text],
+form textarea {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 2em;
+  border: 1px solid #212121;
+  border-radius: 4px;
+  margin-bottom: 1em;
+  padding: 0.4em;
+}
+
+form textarea {
+  box-sizing: border-box;
+  height: 30em;
+}
+
+form input[type=submit] {
+  display: inline-block;
+  box-sizing: border-box;
+  text-align: center;
+  cursor: pointer;
+  color: #212121;
+  border: 1px solid #212121;
+  border-radius: 4px;
+  background-color: #fff;
+  font-weight: bold;
+  height: 38px;
+  padding: 0 38px;
+  margin-bottom: 3em;
+  text-transform: uppercase;
 }
 
