--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -7,6 +7,10 @@ body {
     color: $colorfg;
 }
 
+hr {
+    border: 1px solid $colorborder;
+}
+
 .sidebar {
     position:fixed;
     left: 0;
@@ -28,7 +32,7 @@ body {
 
     .end {
         margin-top: auto;
-        
+
         a {
             padding: 2em 0;
         }
@@ -49,13 +53,108 @@ body {
         color: $color01;
     }
 
-    span {
-        font-size: 1.2rem;
-        margin: 2em 0;
+    h1 {
+        text-align:center;
     }
 }
 
 .container {
     margin-left: 20ch;
     height:100vh;
+    padding: 0em 2em;
+}
+
+@media (max-width: 600px) {
+    .sidebar{
+        display: none;
+    }
+
+    .container{
+        margin-left: 0;
+    }
+
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th {
+        background: $colorfg;
+        color: $colorborder;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    td, th {
+        padding: 6px;
+        height: 2em;
+        border-bottom: 1px solid $colorfg;
+        text-align: left;
+    }
+
+    td.controls {
+        a {
+            display:block;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-decoration: none;
+            color: $colorfg;
+        }
+    }
+
+    th.controls {
+        a {
+            display:block;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-decoration: none;
+            color: white;
+        }
+    }
+}
+
+form {
+    height: 100%;
+
+    label {
+        display: block;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: .9em;
+    }
+
+    input[type=text], textarea{
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        height: 2em;
+        border: 1px solid $colorfg;
+        border-radius: 4px;
+        margin-bottom: 1em;
+        padding: .4em;
+    }
+
+    textarea {
+        box-sizing: border-box;
+        height: 30em;
+    }
+
+
+    input[type=submit]{
+        display: inline-block;
+        box-sizing: border-box;
+        text-align: center;
+        cursor: pointer;
+        color: $colorfg;
+        border: 1px solid $colorfg;
+        border-radius: 4px;
+        background-color: #fff;
+
+        font-weight: bold;  
+        height: 38px;
+        padding: 0 38px;
+        margin-bottom: 3em;
+        text-transform: uppercase;
+    }
 }
