--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,5 +1,386 @@
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+
+/**
+ * Remove the margin in all browsers.
+ */
+
 body {
   margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10+.
+ */
+
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+
+[hidden] {
+  display: none;
+}
+@font-face {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 500;
+  src: url(/fonts/OpenSans-Regular.ttf?5a798cdadc7cd321e3f72425b70bface) format("truetype");
+}
+
+@font-face {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 600;
+  src: url(/fonts/OpenSans-SemiBold.ttf?096d8c73bb18e4328284f25138b47ac6) format("truetype");
+}
+
+@font-face {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  src: url(/fonts/OpenSans-Bold.ttf?0062c34665a3fc0f2278cd4e955702ec) format("truetype");
+}
+
+/* Base
+-------------------------------------*/
+
+html {
+  overflow-y: scroll;
+  background-color: white;
+}
+
+body {
+  font-size: 15px;
+  line-height: 1.6rem;
+  font-family: "OpenSans", sans-serif;
   color: #212121;
 }
 
@@ -7,167 +388,246 @@ hr {
   border: 1px solid #f2f2f2;
 }
 
-.sidebar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 20ch;
-  border-right: 1px solid #f2f2f2;
-}
-
-.sidebar .items {
-  display: -webkit-flex;
-  display: flex;
-  height: 100%;
-  -webkit-flex-direction: column;
-          flex-direction: column;
-  -webkit-justify-content: flex-start;
-          justify-content: flex-start;
-}
-
-.sidebar .item {
-  line-height: 2em;
-}
-
-.sidebar .end {
-  margin-top: auto;
-}
-
-.sidebar .end a {
-  padding: 2em 0;
-}
-
-.sidebar a,
-.sidebar span {
-  display: block;
-  text-align: center;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 2rem;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
   text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 0.2rem;
-  text-decoration: none;
+}
+
+a {
   color: #212121;
-}
-
-.sidebar a:hover {
-  color: #0fa0ce;
-}
-
-.sidebar h1 {
-  text-align: center;
 }
 
 .container {
-  margin-left: 20ch;
-  height: 100vh;
-  padding: 0em 2em;
+  max-width: 38rem;
+  padding: 2rem;
+  margin: auto;
 }
 
-@media (max-width: 600px) {
-  .sidebar {
-    display: none;
-  }
+/* Nav Bar
+-------------------------------------*/
 
-  .container {
-    margin-left: 0;
-  }
+.navbar {
+  display: -webkit-flex;
+  display: flex;
+  border-bottom: 1px solid #f2f2f2;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-table th {
-  background: #212121;
-  color: #f2f2f2;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-table td,
-table th {
-  padding: 6px;
-  height: 2em;
-  border-bottom: 1px solid #212121;
-  text-align: left;
-}
-
-table td.controls a,
-table td.controls input[type=submit] {
-  margin: 0;
-  border: 0;
-  padding: 0;
-  width: 100%;
-  display: block;
-  text-transform: uppercase;
-  text-align: left;
-  font-size: 1rem;
-  font-weight: 600;
-  text-decoration: none;
-  letter-spacing: 0.1em;
+.navbar-items {
+  display: -webkit-flex;
+  display: flex;
+  width: 38rem;
+  padding: 1rem 0;
+  margin: auto;
   color: #212121;
-}
-
-table td.controls input[type=submit] {
-  border: 0;
-  background-color: white;
-  cursor: pointer;
-}
-
-table th.controls a {
-  display: block;
+  list-style: none;
+  letter-spacing: 0.2rem;
+  line-height: 2rem;
   text-transform: uppercase;
-  font-weight: bold;
+  -webkit-justify-content: space-between;
+          justify-content: space-between;
+}
+
+.navbar-item-link {
   text-decoration: none;
-  color: white;
+  font-weight: 600;
 }
 
-form {
-  height: 100%;
+.navbar-item-head {
+  text-decoration: none;
+  font-weight: 700;
 }
 
-form label {
+.navbar-item-link:hover {
+  color: #0fa0ce;
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    width: 100%;
+    margin: 1rem auto;
+  }
+
+  .navbar-items {
+    -webkit-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+
+  .navbar-item-head {
+    font-size: 1.5rem;
+    margin-bottom: 0.6rem;
+  }
+}
+
+/* Forms
+-------------------------------------*/
+
+label {
   display: block;
+  font-weight: 600;
   text-transform: uppercase;
-  font-weight: bold;
-  font-size: 0.9em;
-  margin-bottom: 0.6em;
 }
 
-form input[type=text],
-form textarea {
-  box-sizing: border-box;
+.form-input {
   display: block;
   width: 100%;
-  height: 2em;
+  height: 2rem;
   border: 1px solid #212121;
   border-radius: 4px;
   margin-bottom: 1em;
   padding: 0.4em;
-  font-size: 1rem;
-  font-weight: 400;
 }
 
-form textarea {
-  font-family: inherit;
-  box-sizing: border-box;
-  height: 30em;
+textarea.form-input {
+  height: 20rem;
 }
 
-form .button {
+.form-submit {
   display: inline-block;
-  box-sizing: border-box;
   text-align: center;
   cursor: pointer;
   color: #212121;
   border: 1px solid #212121;
   border-radius: 4px;
   background-color: #fff;
-  font-weight: bold;
-  height: 38px;
-  padding: 0 38px;
-  margin-bottom: 3em;
+  font-weight: 600;
+  height: 2.4rem;
+  padding: 0 2rem;
   text-transform: uppercase;
+}
+
+/* Base
+-------------------------------------*/
+
+.container {
+  margin-left: 13rem;
+  max-width: calc(100% - 13rem);
+}
+
+/* Sidebar 
+-------------------------------------*/
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 13rem;
+  border-right: 1px solid #f2f2f2;
+}
+
+.sidebar-items {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  padding: 1rem 0;
+  letter-spacing: 0.2rem;
+  line-height: 2rem;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.sidebar-head {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-bottom: 0.6rem;
+}
+
+.sidebar-end {
+  font-weight: 700;
+  margin-top: auto;
+  margin-bottom: 2rem;
+}
+
+.sidebar-link {
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.sidebar-link:hover {
+  color: #0fa0ce;
+}
+
+@media (max-width: 600px) {
+  .sidebar {
+    position: static;
+    -webkit-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin: 1rem auto;
+    border: 0;
+    border-bottom: 1px solid #f2f2f2;
+  }
+
+  .sidebar-end {
+    margin-bottom: 0;
+  }
+
+  .container {
+    width: auto;
+    max-width: 100%;
+    padding: 2rem;
+    margin: auto;
+  }
+}
+
+/* Table 
+-------------------------------------*/
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table th {
+  background: #212121;
+  color: #f2f2f2;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.table td,
+.table th {
+  padding: 6px;
+  height: 2em;
+  border-bottom: 1px solid #212121;
+  text-align: left;
+}
+
+.table td.controls a,
+.table td.controls input[type=submit] {
+  display: block;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  width: 100%;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: left;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  color: #212121;
+}
+
+.table td.controls input[type=submit] {
+  background-color: white;
+  cursor: pointer;
+}
+
+.table th.controls a {
+  display: block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
 }
 
