--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -1,88 +1,94 @@
-$colorfg: #212121;
-$colorborder: #f2f2f2;
-$color01: #0fa0ce;
+@import "app.scss";
 
-body {
-    margin: 0;
-    color: $colorfg;
+$sidebar-width: 13rem;
+
+/* Base
+-------------------------------------*/
+.container {
+    margin-left: $sidebar-width;
+    max-width: calc(100% - #{$sidebar-width});
 }
 
-hr {
-    border: 1px solid $colorborder;
-}
 
+/* Sidebar 
+-------------------------------------*/
 .sidebar {
-    position:fixed;
+    position: fixed;
     left: 0;
     top: 0;
     height: 100%;
-    width: 20ch;
+    width: $sidebar-width;
     border-right: 1px solid $colorborder;
-
-    .items {
-        display: flex;
-        height: 100%;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-
-    .item {
-        line-height: 2em;
-    }
-
-    .end {
-        margin-top: auto;
-
-        a {
-            padding: 2em 0;
-        }
-    }
-
-    a, span {
-        display:block;
-        text-align: center;
-        text-transform: uppercase;
-        font-weight: bold;
-        letter-spacing: .2rem;
-        text-decoration: none;
-        color: $colorfg;
-
-    }
-
-    a:hover {
-        color: $color01;
-    }
-
-    h1 {
-        text-align:center;
-    }
 }
 
-.container {
-    margin-left: 20ch;
-    height:100vh;
-    padding: 0em 2em;
+.sidebar-items {
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+    padding: 1rem 0;
+
+    letter-spacing: .2rem;
+    line-height: 2rem;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.sidebar-head {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin-bottom: .6rem;
+}
+
+.sidebar-end {
+    font-weight: 700;
+    margin-top: auto;    
+    margin-bottom: 2rem;
+}
+
+.sidebar-link {
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.sidebar-link:hover {
+    color: $color01;
 }
 
 @media (max-width: 600px) {
     .sidebar{
-        display: none;
+        position: static;
+        flex-direction: column;
+        text-align: center;
+        margin: 1rem auto ;
+        border: 0;
+        border-bottom: 1px solid $colorborder;
+    }
+
+    .sidebar-end {
+        margin-bottom: 0;
     }
 
     .container{
-        margin-left: 0;
+        width: auto;
+        max-width: 100%;
+        padding: 2rem;
+        margin: auto;
     }
 
 }
 
-table {
+/* Table 
+-------------------------------------*/
+
+.table {
     width: 100%;
     border-collapse: collapse;
 
     th {
         background: $colorfg;
         color: $colorborder;
-        font-weight: bold;
+        font-weight: 600;
         text-transform: uppercase;
     }
 
@@ -95,84 +101,29 @@ table {
 
     td.controls {
         a, input[type=submit]{
+            display: block;
             margin: 0;
             border: 0;
             padding: 0;
             width: 100%;
-            display:block;
             text-transform: uppercase;
-            text-align: left;
-            font-size: 1rem;
-            font-weight: 600;
             text-decoration: none;
+            text-align: left;
+            font-weight: 600;
             letter-spacing: .1em;
-
             color: $colorfg;
         }
 
         input[type=submit] {
-            border: 0;
             background-color: white;
             cursor: pointer;
         }
     }
 
-    th.controls {
-        a {
-            display:block;
-            text-transform: uppercase;
-            font-weight: bold;
-            text-decoration: none;
-            color: white;
-        }
-    }
-}
-
-form {
-    height: 100%;
-
-    label {
+    th.controls a {
         display: block;
         text-transform: uppercase;
-        font-weight: bold;
-        font-size: .9em;
-        margin-bottom: .6em;
-    }
-
-    input[type=text], textarea{
-        box-sizing: border-box;
-        display: block;
-        width: 100%;
-        height: 2em;
-        border: 1px solid $colorfg;
-        border-radius: 4px;
-        margin-bottom: 1em;
-        padding: .4em;
-        font-size: 1rem;
-        font-weight: 400;
-    }
-
-    textarea {
-        font-family: inherit;
-        box-sizing: border-box;
-        height: 30em;
-    }
-
-
-    .button{
-        display: inline-block;
-        box-sizing: border-box;
-        text-align: center;
-        cursor: pointer;
-        color: $colorfg;
-        border: 1px solid $colorfg;
-        border-radius: 4px;
-        background-color: #fff;
-
-        font-weight: bold;  
-        height: 38px;
-        padding: 0 38px;
-        margin-bottom: 3em;
-        text-transform: uppercase;
+        text-decoration: none;
+        color: white;
     }
 }
