Cree las rutas para la creacion de projectos

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -504,6 +504,44 @@ textarea.form-input {
   text-transform: uppercase;
 }
 
+/* Images 
+-------------------------------------*/
+
+.image-container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
+.image-container img {
+  display: block;
+  margin: 0.5rem;
+  max-width: calc(100% - 1rem);
+}
+
+@media screen and (min-width: 600px) {
+  .image-container {
+    -webkit-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .image-container img {
+    max-width: calc((100% / 2) - 1rem);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .image-container {
+    -webkit-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .image-container img {
+    max-width: calc((100% / 3) - 1rem);
+  }
+}
+
 /* Base
 -------------------------------------*/
 
@@ -602,6 +640,12 @@ textarea.form-input {
   height: 2em;
   border-bottom: 1px solid #212121;
   text-align: left;
+}
+
+.table td.controls,
+.table th.controls {
+  margin-left: 0;
+  margin-right: auto;
 }
 
 .table td.controls a,
