--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,19 @@
 @import "~purecss/build/pure.css";
+/******************************************************************************
+    => Color definitions
+*******************************************************************************/
+$background-color: hsl(10, 20%, 99%);
+$foreground-color: hsl(10, 10%, 13%);
+$primary-color   : #0fa0ce; 
+$admin-color     : #ee1155;
 
+
+/******************************************************************************
+    => General
+*******************************************************************************/
 body {
-    color: hsl(10, 10%, 13%);
-    background-color: hsl(10, 100%, 99%);
+    color: $foreground-color;
+    background-color: $background-color;
     overflow-y: scroll;
 }
 
@@ -17,11 +28,11 @@ img {
 }
 
 a {
-    color: #0fa0ce;
+    color: $primary-color;
 }
 
 .link {
-    color: #0fa0ce;
+    color: $primary-color;
     border: none;
     background: none;
     text-decoration: underline;
@@ -32,8 +43,11 @@ p {
     line-height: 1.5rem;
 }
 
+/******************************************************************************
+    => Forms 
+*******************************************************************************/
 .pure-form textarea {
-    height: 30ch;
+    height: 20ch;
 }
 
 .pure-form input[type="text"],
@@ -45,7 +59,21 @@ p {
     margin-top: 1em;
 }
 
+.pure-form .control {
+    padding-top: 1em;
+    width:100%;
+    text-align: right;
+}
 
+.pure-form {
+    border: 1px $foreground-color solid;
+    background-color: darken($background-color, 5%);
+    padding: 1em;
+}
+
+/******************************************************************************
+    => Menu
+*******************************************************************************/
 .pure-menu-horizontal {
     display: flex;
     padding-left: 40ch;
@@ -63,12 +91,12 @@ p {
 }
 
 .pure-menu-link {
-    color: #212121;
+    color: $foreground-color;
 }
 
 .pure-menu-link:hover, .pure-menu-highlight {
-    color: #0fa0ce;
-    border-bottom: 1px #0fa0ce solid;
+    color: $primary-color;
+    border-bottom: 1px $primary-color solid;
     background-color: transparent;
 }
 
@@ -77,36 +105,62 @@ p {
     padding: .5em 0;
 }
 
+/******************************************************************************
+    => Buttons & Links
+*******************************************************************************/
+
 .admin-link {
-    color: #ee1155;
+    color: $admin-color;
 }
 
 .admin-link:hover{
-    color: #ee1155;
-    border-bottom: 1px #ee1155 solid;
+    color: $admin-color;
+    border-bottom: 1px $admin-color solid;
     background-color: transparent;
 }
 
 .button-black-white {
-    background-color: #ffffff;
-    color: #212121;
-    border: #212121 solid 1px;
+    background-color: lighten($background-color, 10%);
+    color: $foreground-color;
+    border: $foreground-color solid 1px;
+    border-radius: 0;
+    min-width: 20ch;
 }
 
+.button-black-white:focus,
 .button-black-white:hover {
-    background-color: #eeeeee;
-    color: #212121;
-    border: #212121 solid 1px;
+    background-color: lighten($background-color, 10%);
+    color: $foreground-color;
+    border: $foreground-color solid 1px;
     background-image: none;
+    box-shadow: inset 1px 1px 4px -2px $foreground-color;
+}
+.button-black-white:active{
+    background-color: lighten($background-color, 10%);
+    color: $foreground-color;
+    border: $foreground-color solid 1px;
+    background-image: none;
+    box-shadow: inset 1px 1px 2px $foreground-color;
 }
 
+/******************************************************************************
+    => Tables
+*******************************************************************************/
 .table-heading {
     margin-bottom: 1em;
 }
 
-.pure-table {
+.pure-table,
+.pure-table thead,
+.pure-table tbody{
     width: 100%;
 }
+
+.pure-table thead {
+    background-color: lighten($background-color, 10%);
+    border: 1px black solid;
+}
+
 
 .pure-table,
 .pure-table td,
@@ -119,16 +173,25 @@ p {
     max-width: 30ch;
 }
 
+.pure-table tr {
+    border-bottom: 1px black solid;
+}
+
 .pure-table .controls {
-    display: inline-flex;
+    width: 16ch;
 }
 
-.pure-table .controls a:first-child{
-    padding-right: 1em;
+.pure-table .controls > *{
+    display: inline-block;
 }
 
-.pure-form .control {
-    padding-top: 1em;
-    width:100%;
-    text-align: right;
+.pure-table .controls .pure-button.button-black-white{
+    min-width: auto;
+    width: 7ch;
+    padding: .5em 0;
 }
+
+.pure-table .controls :first-child {
+    margin-right: 1ch;
+}
+
