--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,13 +18,14 @@ body {
 }
 
 .container {
-    max-width: 70ch;
+    max-width: 80ch;
     padding-bottom: 2ch;
     margin: auto;
 }
 
 img {
     max-width: 100%;
+    cursor: pointer;
 }
 
 a {
@@ -43,16 +44,34 @@ p {
     line-height: 1.5rem;
 }
 
+article {
+    box-shadow: 3px 3px 10px 0px #aaa;
+    padding: 2ch 10ch;
+    margin-bottom: 2em;
+}
+
 /******************************************************************************
     => Forms 
 *******************************************************************************/
 .pure-form textarea {
-    height: 20ch;
+    height: 25ch;
+    min-width: calc(80ch - 2em);
+    max-width: calc(80ch - 2em);
 }
 
 .pure-form input[type="text"],
 .pure-form textarea {
-    width: 100%;
+    width: calc(80ch - 2em);
+}
+
+.pure-form input[type="text"],
+.pure-form input[type="email"],
+.pure-form input[type="password"],
+.pure-form textarea {
+    border-radius: 0;
+    border: 1px $foreground-color solid;
+    box-shadow: none;
+    background-color: lighten($background-color, 10% );
 }
 
 .pure-form label {
@@ -60,14 +79,15 @@ p {
 }
 
 .pure-form .control {
+    width: 100%;
     padding-top: 1em;
-    width:100%;
     text-align: right;
 }
 
 .pure-form {
-    border: 1px $foreground-color solid;
-    background-color: darken($background-color, 5%);
+    box-shadow: 0px 0px 20px -15px $foreground-color;
+    //border: 1px $foreground-color solid;
+    //background-color: darken($background-color, 5%);
     padding: 1em;
 }
 
