uni los archivos de resources para menos transferencias

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 @import "~purecss/build/pure.css";
-@import "colors.scss";
+@import "./colors.scss";
+@import "./prism-theme.scss";
 
 
 /******************************************************************************
