feat: Mas fuentes y la definicion de todas ellas
Decidi agregar una fuente monospace y para ello elegi a Hack que es de
mis preferidas.

Junto con esto, agrege todos los @fontfaces necesarios para acceder a
las fuentes existente

Tambien defini la fuente por default para el codigo a Hack

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,17 +1,8 @@
 @import "~purecss/build/pure.css";
 @import "./colors.scss";
+@import "./fonts.scss";
 @import "./prism-theme.scss";
 
-/******************************************************************************
-    => Font
-*******************************************************************************/
-@font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Raleway'),
-    url('/fonts/Raleway-Regular.ttf') format('truetype'),
-}
 
 /******************************************************************************
     => General
@@ -20,7 +11,7 @@ body {
     color: $foreground-color;
     background-color: $background-color;
     overflow-y: scroll;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
 }
 
 .container {
