--- a/resources/sass/prism-theme.scss
+++ b/resources/sass/prism-theme.scss
@@ -6,8 +6,8 @@ pre[class*="language-"] {
 }
 
 code[class*="language-"], pre[class*="language-"] {
-    font-family: monospace;
-    font-size: 1.1em;
+    font-family: 'Hack', monospace;
+    font-size: 0.9em;
     line-height: 1.2em;
     text-shadow: none;
 }
